feat: support schema evolution sql